# boldaric

./: .dockerignore  .gitignore  ChangeLog  Dockerfile  MANIFEST.in  README.md  alembic.ini  pyproject.toml  tox.ini
.github/workflows/: tests.yml
alembic/: env.py
alembic/versions/: 976eefd09ec2_add_options_to_the_station.py
boldaric/: __init__.py  alembic.ini  extractor.py  feature_helper.py  labels.py  server.py  simulator.py  stationdb.py  subsonic.py  subsonic_worker.py  utils.py  vectordb.py
boldaric/alembic/: env.py
boldaric/alembic/versions/: 114385708a78_create_genres_table.py  62f112c1aff4_add_category_to_stations.py  81c33e7d2d47_create_tracks_table.py  976eefd09ec2_add_options_to_the_station.py  aafc0e5c01f8_add_track_id_to_track_history.py  b657c1674be1_drop_embedding_history_table.py  c72182d41018_create_tracks_genres_table.py  initial_schema.py
boldaric/models/: __init__.py  embedding_history.py  genre.py  mood_model.pb  station.py  track.py  track_genre.py  track_history.py  user.py
boldaric/records/: __init__.py  station_options.py  track.py
boldaric/static/: index.html
boldaric/static/css/: style.css
boldaric/static/js/: app.js
boldaric/static/js/components/: login-component.js  player-component.js  search-modal.js  station-create.js  station-edit.js  station-list.js
resources/: supervisord.conf
samples/: mood-power-metal-different.yml  mood-power-metal-similar.yml  smoke-on-the-water.json
scripts/: analyze_similarities.py  boldaric-server  compare-two-songs.py  fake-player.py  fix-embedding-normalization.py  generate_default_normalization.py  reset_vector_db.py  test-similarities.py  webserver
tests/: test_extractor.py  test_models.py  test_server.py  test_stationdb.py  test_track_history_timestamps.py  test_vectordb.py
